# rust-pwa

./: Cargo.toml  run.py
frontend/: Cargo.toml  package-lock.json  package.json
src/: main.rs
static/: index.html
