[package]
name = "rust-pwa"
version = "0.1.0"
authors = ["Sam Toth <sam@toth.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
web-view = { version = "0.5.4", features = ["edge"]}
rust-embed = "5.5.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
mime_guess = "2.0.3"
futures = "0.3.5"